AC_INIT(optiextractor, 2.3)

AM_INIT_AUTOMAKE([subdir-objects])

AC_CONFIG_MACRO_DIR([m4])
AC_PROG_LIBTOOL

AC_ISC_POSIX
AC_STDC_HEADERS
AC_PROG_CXX
AC_HEADER_STDC

AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_CONFIG_HEADERS(config.h)
AM_MAINTAINER_MODE

m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])

PKG_CHECK_MODULES(PACKAGE_OPTIEXTRACTOR, [
	gtkmm-2.4 >= 2.12
	liboptimization-2.0
])

if test "x$USE_MAINTAINER_MODE" = "xyes"; then
PACKAGE_OPTIEXTRACTOR_CFLAGS="$PACKAGE_OPTIEXTRACTOR_CFLAGS -Wall -Werror -Wuninitialized -O2 -g"
fi

AC_SUBST(PACKAGE_OPTIEXTRACTOR_CFLAGS)
AC_SUBST(PACKAGE_OPTIEXTRACTOR_LIBS)

AC_OUTPUT(
Makefile
src/Makefile
data/Makefile
)
